--- a/SharpAssert.Rewriter.Tests/SharpAssert.Rewriter.Tests.csproj
+++ b/SharpAssert.Rewriter.Tests/SharpAssert.Rewriter.Tests.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="NUnit.Analyzers" Version="4.4.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
     <PackageReference Include="FluentAssertions" Version="6.12.1" />
+    <PackageReference Include="Microsoft.Build.Framework" Version="17.8.3" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.8.3" />
   </ItemGroup>
 
   <ItemGroup>
