--- a/SharpAssert.PackageTest/SharpAssert.PackageTest.csproj
+++ b/SharpAssert.PackageTest/SharpAssert.PackageTest.csproj
@@ -10,17 +10,19 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
-        <PackageReference Include="NUnit" Version="4.2.2"/>
-        <PackageReference Include="NUnit.Analyzers" Version="4.4.0"/>
-        <PackageReference Include="NUnit3TestAdapter" Version="4.6.0"/>
+        <PackageReference Include="FluentAssertions" Version="8.5.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+        <PackageReference Include="NUnit" Version="4.2.2" />
+        <PackageReference Include="NUnit.Analyzers" Version="4.4.0" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
         
         <!-- Package reference updated by run-package-test.sh script -->
         <PackageReference Include="SharpAssert" Version="1.0.0-local" />
+        <PackageReference Include="SharpAssert.Rewriter" Version="1.0.0-local" />
     </ItemGroup>
 
     <ItemGroup>
-        <Using Include="NUnit.Framework"/>
+        <Using Include="NUnit.Framework" />
     </ItemGroup>
 
 </Project>
