Remove rewriter fix plan

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 bin/
 obj/
 /packages/
-/SharpAssert.IntegrationTest/packages
 riderModule.iml
 /_ReSharper.Caches/
 coverage.cobertura.xml
 TestResults
 .branches
+local-feed
