--- a/SharpAssert.Rewriter/SharpAssert.Rewriter.csproj
+++ b/SharpAssert.Rewriter/SharpAssert.Rewriter.csproj
@@ -7,6 +7,21 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    
+    <!-- Package metadata -->
+    <PackageId>SharpAssert.Rewriter</PackageId>
+    <Title>SharpAssert.Rewriter</Title>
+    <Description>MSBuild source rewriter for SharpAssert assertion library</Description>
+    <Version>1.0.0</Version>
+    <Authors>Yevhen Bobrov</Authors>
+    <Company>Cloudrite</Company>
+    <Copyright>Copyright © 2025 Yevhen Bobrov</Copyright>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/yevhen/SharpAssert</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/yevhen/SharpAssert</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>msbuild;rewriter;assertions;testing</PackageTags>
+    <PackageIcon Condition="Exists('..\icon.png')">icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +32,8 @@
 
   <ItemGroup>
     <None Include="build\SharpAssert.Rewriter.targets" Pack="true" PackagePath="build\" />
+    <None Include="..\LICENSE" Pack="true" PackagePath="\" />
+    <None Include="..\icon.png" Pack="true" PackagePath="\" Condition="Exists('..\icon.png')" />
   </ItemGroup>
   
   <!-- Include all built assemblies in the tools directory -->
