--- a/SharpAssert.PowerAssertTest/SharpAssert.PowerAssertTest.csproj
+++ b/SharpAssert.PowerAssertTest/SharpAssert.PowerAssertTest.csproj
@@ -8,6 +8,8 @@
         <IsPackable>false</IsPackable>
         <RootNamespace>SharpAssert.PowerAssertTest</RootNamespace>
         <OutputType>Library</OutputType>
+        <!-- Suppress NETSDK1206 warning from PowerAssert's Libuv dependency -->
+        <NoWarn>$(NoWarn);NETSDK1206</NoWarn>
         
         <!-- Enable PowerAssert mode for this test project -->
         <SharpAssertUsePowerAssert>true</SharpAssertUsePowerAssert>
