--- a/SharpAssert.Rewriter.Tests/SharpAssert.Rewriter.Tests.csproj
+++ b/SharpAssert.Rewriter.Tests/SharpAssert.Rewriter.Tests.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <!-- Suppress NETSDK1206 warning from PowerAssert's Libuv dependency -->
+    <NoWarn>$(NoWarn);NETSDK1206</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
