--- a/SharpAssert.Tests/SharpAssert.Tests.csproj
+++ b/SharpAssert.Tests/SharpAssert.Tests.csproj
@@ -8,6 +8,8 @@
         <IsPackable>true</IsPackable>
         <RootNamespace>SharpAssert</RootNamespace>
         <OutputType>Library</OutputType>
+        <!-- Suppress NETSDK1206 warning from PowerAssert's Libuv dependency -->
+        <NoWarn>$(NoWarn);NETSDK1206</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
