--- a/SharpAssert.Rewriter/SharpAssert.Rewriter.csproj
+++ b/SharpAssert.Rewriter/SharpAssert.Rewriter.csproj
@@ -29,7 +29,7 @@
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
