Fix publish flow for new package structure

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -68,7 +68,7 @@ jobs:
         echo "Testing packages in test-feed:"
         ls -la test-feed/
     
-    - name: Publish to NuGet (dependency order)
+    - name: Publish to NuGet
       run: |
         # Publish Runtime package first (dependency)
         echo "Publishing SharpAssert.Runtime (dependency)..."
@@ -76,11 +76,7 @@ jobs:
           --api-key ${{ secrets.NUGET_API_KEY }} \
           --source https://api.nuget.org/v3/index.json \
           --skip-duplicate
-        
-        # Wait for NuGet indexing (dependency propagation)
-        echo "Waiting 30 seconds for NuGet indexing..."
-        sleep 30
-        
+ 
         # Publish main package (depends on Runtime)
         echo "Publishing SharpAssert (main package)..."
         dotnet nuget push ./packages/SharpAssert.*.nupkg \
