Move common package props to Directory.Buid.props

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -21,6 +21,22 @@
         <!-- Common package metadata -->
         <Authors>Yevhen Bobrov</Authors>
         <Copyright>Copyright © $([System.DateTime]::Now.Year)</Copyright>
+
+        <!-- Package metadata -->
+        <PackageId>SharpAssert.Runtime</PackageId>
+        <Title>SharpAssert Runtime</Title>
+        <Description>Core assertion library for SharpAssert</Description>
+        <Authors>Yevhen Bobrov</Authors>
+        <Company>Cloudrite</Company>
+        <Copyright>Copyright © 2025 Yevhen Bobrov</Copyright>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <PackageProjectUrl>https://github.com/yevhen/SharpAssert</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/yevhen/SharpAssert</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>nunit;xunit;testing;assertions</PackageTags>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageIcon Condition="Exists('..\icon.png')">icon.png</PackageIcon>
+
     </PropertyGroup>
     
 </Project>
