--- a/SharpAssert.Runtime/SharpAssert.csproj
+++ b/SharpAssert.Runtime/SharpAssert.csproj
@@ -12,19 +12,7 @@
         <!-- Package metadata -->
         <PackageId>SharpAssert.Runtime</PackageId>
         <Title>SharpAssert Runtime</Title>
-        <Description>Core assertion library for SharpAssert - pytest-style assertions for .NET</Description>
-        <Version>1.0.0</Version>
-        <Authors>Yevhen Bobrov</Authors>
-        <Company>Cloudrite</Company>
-        <Copyright>Copyright © 2025 Yevhen Bobrov</Copyright>
-        <PackageLicenseFile>LICENSE</PackageLicenseFile>
-        <PackageProjectUrl>https://github.com/yevhen/SharpAssert</PackageProjectUrl>
-        <RepositoryUrl>https://github.com/yevhen/SharpAssert</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
-        <PackageTags>nunit;xunit;testing;assertions;pytest</PackageTags>
-        <PackageReadmeFile>README.md</PackageReadmeFile>
-        <PackageIcon Condition="Exists('..\icon.png')">icon.png</PackageIcon>
-
+        <Description>Core assertion library for SharpAssert</Description>
     </PropertyGroup>
 
     <!-- Source symbols and XML documentation for Release builds only -->
