--- a/src/SharpAssert.Rewriter.Tests/SharpAssert.Rewriter.Tests.csproj
+++ b/src/SharpAssert.Rewriter.Tests/SharpAssert.Rewriter.Tests.csproj
@@ -23,7 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SharpAssert\SharpAssert.csproj" />
-    <ProjectReference Include="..\SharpAssert.Runtime\SharpAssert.csproj" />
+    <ProjectReference Include="..\SharpAssert.Runtime\SharpAssert.Runtime.csproj" />
   </ItemGroup>
 
   <ItemGroup>
