--- a/src/SharpAssert.Tests/SharpAssert.Tests.csproj
+++ b/src/SharpAssert.Tests/SharpAssert.Tests.csproj
@@ -22,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SharpAssert.Runtime\SharpAssert.csproj" />
+        <ProjectReference Include="..\SharpAssert.Runtime\SharpAssert.Runtime.csproj" />
     </ItemGroup>
 
     <ItemGroup>
