--- a/src/SharpAssert.Tests/SharpAssert.Tests.csproj
+++ b/src/SharpAssert.Tests/SharpAssert.Tests.csproj
@@ -19,10 +19,14 @@
         <PackageReference Include="NUnit" Version="4.2.2"/>
         <PackageReference Include="NUnit.Analyzers" Version="4.4.0"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.6.0"/>
+        <PackageReference Include="Microsoft.Build.Framework" Version="17.8.3" />
+        <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.8.3" />
+        
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\SharpAssert.Runtime\SharpAssert.Runtime.csproj" />
+        <ProjectReference Include="..\SharpAssert\SharpAssert.csproj" />
     </ItemGroup>
 
     <ItemGroup>
