--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Create packages
       run: |
         mkdir -p ./packages
-        dotnet pack SharpAssert.Runtime/SharpAssert.csproj \
+        dotnet pack SharpAssert.Runtime/SharpAssert.Runtime.csproj \
           --configuration Release \
           --no-build \
           --output ./packages \
