--- a/src/SharpAssert.Runtime/SharpAssert.Runtime.csproj
+++ b/src/SharpAssert.Runtime/SharpAssert.Runtime.csproj
@@ -26,7 +26,7 @@
     <ItemGroup>
         <None Include="..\..\README.md" Pack="true" PackagePath="\" />
         <None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
-        <None Include="..\..\icon.png" Pack="true" PackagePath="\" Condition="Exists('..\..\icon.png')" />
+        <None Include="..\..\icon.png" Pack="true" PackagePath="\" />
     </ItemGroup>
 
     <ItemGroup>
