--- a/src/SharpAssert.IntegrationTests/SharpAssert.IntegrationTests.csproj
+++ b/src/SharpAssert.IntegrationTests/SharpAssert.IntegrationTests.csproj
@@ -35,4 +35,8 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="obj\Debug\" />
+  </ItemGroup>
+
 </Project>
