--- a/src/SharpAssert.PackageTest/SharpAssert.PackageTest.csproj
+++ b/src/SharpAssert.PackageTest/SharpAssert.PackageTest.csproj
@@ -17,20 +17,11 @@
         <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
         
         <!-- Single package reference - Runtime dependency comes automatically -->
-        <PackageReference Include="SharpAssert" Version="1.0.0-dev*" />
+        <PackageReference Include="SharpAssert" Version="1.0.0-local" />
     </ItemGroup>
 
     <ItemGroup>
         <Using Include="NUnit.Framework" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <!-- Link integration test files to avoid duplication -->
-        <Compile Include="..\SharpAssert.IntegrationTests\**\*.cs" 
-                 Link="Shared\%(RecursiveDir)%(Filename)%(Extension)"
-                 Exclude="..\SharpAssert.IntegrationTests\obj\**;..\SharpAssert.IntegrationTests\bin\**" />
-                 
-        <!-- Keep any package-specific tests in this project directly -->
     </ItemGroup>
 
 </Project>
