--- a/src/SharpAssert.Runtime/SharpAssert.Runtime.csproj
+++ b/src/SharpAssert.Runtime/SharpAssert.Runtime.csproj
@@ -32,4 +32,8 @@
         <PackageReference Include="DiffPlex" Version="1.8.0" />
   </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Features\" />
+    </ItemGroup>
+
 </Project>
